--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-ECHO is on.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NoelBC</title>
+</head>
+<body>
+  <nav>
+    <a href="./portfolio/index.html">Portfolio</a>
+    <a href="/">Home</a>
+    <a href="./about/index.html">About</a>
+  </nav>
+</body>
+</html>
