--- a/portfolio/class04-materials/relationship-css/index.html
+++ b/portfolio/class04-materials/relationship-css/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Blank Template</title>
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
 		<h1>Hello</h1>
@@ -14,6 +14,7 @@
 		<section>
 			<article>
 				<h2>Unicorn</h2>
+				<h2>Hufflepuff</h2>
 			</article>
 		</section>
 		<article>
