class 5 layout practice

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,6 +38,15 @@
             </li>
           </ul>
         </li>
+        <li>
+          <ul>
+            <li><a href="./class_05/layout01.html">layout01</a></li>
+            <li><a href="./class_05/layout02.html">layout02</a></li>
+            <li><a href="./class_05/layout03.html">layout02</a></li>
+            <li><a href="./class_05/layout04.html">layout02</a></li>
+         
+          </ul>
+        </li>
       </ol>
     </section>
   </body>
