--- a/portfolio/class_05/layout2.html
+++ b/portfolio/class_05/layout2.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>layout2</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./layout2.css" />
+  </head>
+  <body>
+    <header></header>
+    <div>
+      <section class="section11"></section>
+      <section class="section12"></section>
+      <section class="section13"></section>
+    </div>
+    <section class="section21"></section>
+    <section class="section22"></section>
+    <footer></footer>
+  </body>
 </html>
