--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -27,23 +27,19 @@
         <li>
           <ul>
             <li>
-              <a href="./class04-materials/assignment/index.html"
-                >leon about us page</a
-              >
+              <a href="./class_04/assignment/index.html">leon about us page</a>
             </li>
             <li>
-              <a href="./class04-materials/basic-css/index.html"
-                >basic home page</a
-              >
+              <a href="./class_04/basic-css/index.html">basic home page</a>
             </li>
           </ul>
         </li>
         <li>
           <ul>
-            <li><a href="./class_05/layout01.html">layout01</a></li>
-            <li><a href="./class_05/layout02.html">layout02</a></li>
-            <li><a href="./class_05/layout03.html">layout03</a></li>
-            <li><a href="./class_05/layout04.html">layout04</a></li>
+            <li><a href="./class_05/layout1.html">layout01</a></li>
+            <li><a href="./class_05/layout2.html">layout02</a></li>
+            <li><a href="./class_05/layout3.html">layout03</a></li>
+            <li><a href="./class_05/layout4.html">layout04</a></li>
           </ul>
         </li>
       </ol>
