--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,11 +10,12 @@
     <!-- create a navbar -->
 
     <nav>
+      <p>Portfolio</p>
+      <div class="nav-links">
       <a href="/">Home</a>
       <span>|</span>
       <a href="/">About us</a>
-      <span>|</span>
-      <a href="/">portfolio</a>
+    </div>
     </nav>
     <section class="projects">
       <!-- add heading for each class and then projects -->
@@ -35,6 +36,7 @@
           </ul>
         </li>
         <li>
+          using floats
           <ul>
             <li><a href="./class_05/layout1.html">layout01</a></li>
             <li><a href="./class_05/layout2.html">layout02</a></li>
