edit class6 and add class 7

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -44,6 +44,13 @@
             <li><a href="./class_05/layout4.html">layout04</a></li>
           </ul>
         </li>
+        <li></li>
+        <li> responsive design
+          <ul>
+            <li>review: <a href="./class_07/box-model-practice/index.html">box-model</a></li>
+            <li><a href="./class_07/template/index.html">responsive design</a> using media queries</li>
+          </ul>
+        </li>
       </ol>
     </section>
   </body>
