work on layouts class08

--- a/portfolio/class_08/layout3/index.html
+++ b/portfolio/class_08/layout3/index.html
@@ -1,19 +1,71 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-  	<meta charset="utf-8">
-  	<meta name="description" content="Your description goes here">
-  	<meta name="keywords" content="one, two, three">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<title>Blank Template</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Your description goes here" />
+    <meta name="keywords" content="one, two, three" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
+    <title>BBC Home Page</title>
 
-		<script type="text/javascript" src="js/main.js"></script>
-	</body>
+    <!-- external CSS link -->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <!-- logo -->
+      <p>BBC</p>
+      <!-- signin -->
+      <p>signin</p>
+      <!-- make a list of anchors -->
+	  <nav>
+      <ul class="header-nav">
+        <li>Home</li>
+        <li>News</li>
+        <li>Sport</li>
+        <li>Reel</li>
+        <li>Worklife</li>
+        <li>Travel</li>
+        <li>Future</li>
+        <li>Culture</li>
+        <li>More ^</li>
+      </ul>
+	  <nav>
+
+      <!-- make a search bar -->
+      <form action="" class="form1">
+        <input type="text" placeholder="Search" />
+      </form>
+    </header>
+    <!-- h3 that says welcome -->
+	<h3>welcome to bbc</h3>
+    <main class="main">
+      <!-- div for 2 bigger images -->
+      <section class="bigger-img">
+		<img src="./imgs/bbcimg1.png" alt="" class="big-img">
+	  </section>
+      <!-- for 4 smaller images -->
+      <section class="smaller-img">
+		<img src="./imgs/bbcsmall1.png" alt="" class="img1">
+		<img src="./imgs/bbcsmall2.png" alt="" class="img2">
+		<img src="./imgs/bbcsmall3.png" alt="" class="img3">
+		<img src="./imgs/bbcsmall4.png" alt="" class="img4">
+	  </section>
+    </main>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>	
+    <!-- section for news -->
+<div class="news">
+	<section> <img src="./imgs/bbcnews1.png" alt="" class="news1"></section>
+	<section> <img src="./imgs/bbcnews2.png" alt="" class="news2"></section>
+	<section> <img src="./imgs/bbcnews3.png" alt="" class="news3"></section>
+
+</div>
+
+	<script type="text/javascript" src="js/main.js"></script>
+  </body>
 </html>
