--- a/portfolio/class_08/layout2/index.html
+++ b/portfolio/class_08/layout2/index.html
@@ -6,33 +6,34 @@
     <meta name="keywords" content="one, two, three" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Blank Template</title>
+    <title>khan academy</title>
 
     <!-- external CSS link -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header></header>
-    <main>
-      <section>
-        <img
-          src="./khanacacemymainimg.png"
-          alt="student looking at the screen"
-        />
-      </section>
-      <section>
-        <h1>For every student, every classroom. Real results.</h1>
-        <p>We’re a nonprofit with the mission to provide a free, world-class education for anyone, anywhere.</p>
-        <nav>
-          <button><a href="#">Learner</a></button>
-          <button><a href="#">Teacher</a></button>
-          <button><a href="#">Parent</a></button>
-        </nav>
-      </section>
-    </main>
+    <header>
+      <ul>
+        <li>courses</li>
+        <li>
+          <form action="">
+            <input type="text" />
+          </form>
+        </li>
+      </ul>
+      <p>khan academy</p>
+      <nav>
+        <ul>
+          <li>Donate</li>
+          <li>Login</li>
+          <li>SignUp</li>
+        </ul>
+      </nav>
+    </header>
+    <br />
+    <main></main>
     <footer></footer>
-
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
