--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,6 +51,9 @@
             <li><a href="./class_07/template/index.html">responsive design</a> using media queries</li>
           </ul>
         </li>
+        <ul>
+          <li><a href="./class_11/box-model-practice/index.html">box model practice</a></li>
+        </ul>
       </ol>
     </section>
   </body>
