--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,6 +53,7 @@
         </li>
         <ul>
           <li><a href="./class_11/box-model-practice/index.html">box model practice</a></li>
+          <li><a href="./class_11/media-query-practice/index.html">media queries practice</a></li>
         </ul>
       </ol>
     </section>
