--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,6 +54,7 @@
         <ul>
           <li><a href="./class_11/box-model-practice/index.html">box model practice</a></li>
           <li><a href="./class_11/media-query-practice/index.html">media queries practice</a></li>
+          <li><a href="./class_11/layout1/index.html">flexbox practice</a></li>
         </ul>
       </ol>
     </section>
