--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,7 +54,9 @@
         <ul>
           <li><a href="./class_11/box-model-practice/index.html">box model practice</a></li>
           <li><a href="./class_11/media-query-practice/index.html">media queries practice</a></li>
-          <li><a href="./class_11/layout1/index.html">flexbox practice</a></li>
+          <li><a href="./class_11/layout1/index.html">flexbox pracice 1</a></li>
+          <li><a href="./class_11/layout2/index.html">flexbox pracice 2</a></li>
+          <li><a href="./class_11/layout3/index.html">flexbox pracice 3</a></li>
         </ul>
       </ol>
     </section>
