--- a/portfolio/class_11/layout3/index.html
+++ b/portfolio/class_11/layout3/index.html
@@ -34,8 +34,9 @@
 			</nav>
 		</header>
 		<main>
-			<h2>Welcome BBC.com</h2>
 			<section>
+				<h2>Welcome BBC.com</h2>
+
 				<img src="#" alt="two people">
 				<h1>Historic Peace Deal</h1>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
@@ -62,8 +63,10 @@
 
 		</main>
 		<section>
-			<h2>News</h2>
-			<section>
+
+			<section class="container">
+				<h2>News</h2>
+
 				<img src="#" alt="Joe Byron">
 				<h3>Lorem ipsum dolor sit amet consectetur</h3>
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptates, distinctio recusandae ea praesentium</p>
