class12 project add

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,10 +12,10 @@
     <nav>
       <p>Portfolio</p>
       <div class="nav-links">
-      <a href="/">Home</a>
-      <span>|</span>
-      <a href="/">About us</a>
-    </div>
+        <a href="/">Home</a>
+        <span>|</span>
+        <a href="/">About us</a>
+      </div>
     </nav>
     <section class="projects">
       <!-- add heading for each class and then projects -->
@@ -45,18 +45,36 @@
           </ul>
         </li>
         <li></li>
-        <li> responsive design
+        <li>
+          responsive design
           <ul>
-            <li>review: <a href="./class_07/box-model-practice/index.html">box-model</a></li>
-            <li><a href="./class_07/template/index.html">responsive design</a> using media queries</li>
+            <li>
+              review:
+              <a href="./class_07/box-model-practice/index.html">box-model</a>
+            </li>
+            <li>
+              <a href="./class_07/template/index.html">responsive design</a>
+              using media queries
+            </li>
           </ul>
         </li>
         <ul>
-          <li><a href="./class_11/box-model-practice/index.html">box model practice</a></li>
-          <li><a href="./class_11/media-query-practice/index.html">media queries practice</a></li>
+          <li>
+            <a href="./class_11/box-model-practice/index.html"
+              >box model practice</a
+            >
+          </li>
+          <li>
+            <a href="./class_11/media-query-practice/index.html"
+              >media queries practice</a
+            >
+          </li>
           <li><a href="./class_11/layout1/index.html">flexbox pracice 1</a></li>
           <li><a href="./class_11/layout2/index.html">flexbox pracice 2</a></li>
           <li><a href="./class_11/layout3/index.html">flexbox pracice 3</a></li>
+        </ul>
+        <ul>
+          <li><a href="class_12\class-weekend-boring\index.html">day mode check</a></li>
         </ul>
       </ol>
     </section>
