--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -75,6 +75,7 @@
         </ul>
         <ul>
           <li><a href="class_12\class-weekend-boring\index.html">day mode check</a></li>
+          <li><a href="class_12\background-picker\index.html">backgroundPicker</a></li>
         </ul>
       </ol>
     </section>
