add link to home page of portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -76,6 +76,7 @@
         <ul>
           <li><a href="class_12\class-weekend-boring\index.html">day mode check</a></li>
           <li><a href="class_12\background-picker\index.html">backgroundPicker</a></li>
+          <li><a href="class_12\simple-calculator\index.html">give or take</a></li>
         </ul>
       </ol>
     </section>
