--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -58,26 +58,50 @@
             </li>
           </ul>
         </li>
-        <ul>
-          <li>
-            <a href="./class_11/box-model-practice/index.html"
-              >box model practice</a
-            >
-          </li>
-          <li>
-            <a href="./class_11/media-query-practice/index.html"
-              >media queries practice</a
-            >
-          </li>
-          <li><a href="./class_11/layout1/index.html">flexbox pracice 1</a></li>
-          <li><a href="./class_11/layout2/index.html">flexbox pracice 2</a></li>
-          <li><a href="./class_11/layout3/index.html">flexbox pracice 3</a></li>
-        </ul>
-        <ul>
-          <li><a href="class_12\class-weekend-boring\index.html">day mode check</a></li>
-          <li><a href="class_12\background-picker\index.html">backgroundPicker</a></li>
-          <li><a href="class_12\simple-calculator\index.html">give or take</a></li>
-        </ul>
+
+        <li></li>
+        <li></li>
+        <li></li>
+        <li>
+          <ul>
+            <li>
+              <a href="./class_11/box-model-practice/index.html"
+                >box model practice</a
+              >
+            </li>
+            <li>
+              <a href="./class_11/media-query-practice/index.html"
+                >media queries practice</a
+              >
+            </li>
+            <li>
+              <a href="./class_11/layout1/index.html">flexbox pracice 1</a>
+            </li>
+            <li>
+              <a href="./class_11/layout2/index.html">flexbox pracice 2</a>
+            </li>
+            <li>
+              <a href="./class_11/layout3/index.html">flexbox pracice 3</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <ul>
+            <li>
+              <a href="class_12\class-weekend-boring\index.html"
+                >day mode check</a
+              >
+            </li>
+            <li>
+              <a href="class_12\background-picker\index.html"
+                >backgroundPicker</a
+              >
+            </li>
+            <li>
+              <a href="class_12\simple-calculator\index.html">give or take</a>
+            </li>
+          </ul>
+        </li>
       </ol>
     </section>
   </body>
