basic temp convertor

--- a/portfolio/class_13/temperature-converter/index.html
+++ b/portfolio/class_13/temperature-converter/index.html
@@ -5,14 +5,19 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+		<title>C to F temp converter</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<input type="number" id="tempC" placeholder="Input temp in C">
 		
+		<button id="submit">Convert</button>
+	
+
+		<h2 id="tempf"></h2>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
