--- a/portfolio/class_27/api-template/index.html
+++ b/portfolio/class_27/api-template/index.html
@@ -18,10 +18,10 @@
 		<button type="button" name="button">get data</button>
 
 		<h2>Image of the day</h2>
-		<img src="img/pokemon.jpeg" alt="">
-		<iframe src="" frameborder="0"></iframe>
+		<img class="disp" src="img/pokemon.jpeg" alt="image of the day">
+		<iframe class="disp" src=" " ></iframe>
 		<h3>explanation</h3>
 
-		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="./js/main.js"></script>
 	</body>
 </html>
