--- a/portfolio/class_27/card_game/index.html
+++ b/portfolio/class_27/card_game/index.html
@@ -5,18 +5,31 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>localStorage add another one</title>
+		<title>card game🃏🎴</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<img src="./img/tony.jpeg" alt="Netflix's The Circle">
+	
+<h1> war of cards!!</h1>
 
-		<h2></h2>
-		<button type="button">submit</button>
+<button>Darw  🃏🎴</button>
+<main>
 
-		<script type="text/javascript" src="js/main.js"></script>
+<div>
+	<h2 class="player-text">player1</h2>
+	<img id="player1-img" src="" alt="">
+</div>
+<hr>
+<div>
+	<h2 class="player-text">player2</h2>
+	<img id="player2-img" src="" alt="">
+
+</div>
+</main>
+<script type="text/javascript" src="./js/main.js"></script>
+
 	</body>
 </html>
