--- a/portfolio/class_28/dnd/index.html
+++ b/portfolio/class_28/dnd/index.html
@@ -20,6 +20,7 @@
 		<h2>Name?</h2>
 		<img src="img/dnd.jpg" alt="">
 		<iframe src="" frameborder="0"></iframe>
+		<p>description</p>
 		<h3>Class?</h3>
 		<h4>Sub Classes?</h4>
 		<ul></ul>
